# my-html-app

./: app.py  index.html  packages.txt  pyproject.toml  requirements.txt  script.js  setup.py  style.css
.github/workflows/: deploy.yml
Config/: config.py  fetchindex.py  indexjson.py
Config/STATIC/: dhan_secrets.ini  nifty_index_links.csv  nifty_indices_json.json  stock_metadata.json
Data/: update_gap_analysis.py
Data/REALTIME/: today_opening_prices.json
Execution/: dhan_execution_engine.py
Risk/: garch.py
Strategies/: dow_theory.py  dow_theory_live.py
Utilities/: utilities.py
pages/: 16_💸_Paper_Trading.py
