[project]
name = "streamlit-app"
version = "0.1.0"
# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

# [project]
# name = "repl-nix-workspace-app"  # any name, doesn’t need a folder
# version = "0.1.0"
# requires-python = ">=3.11"
# dependencies = []
# [project]
# name = "repl-nix-workspace"
# version = "0.1.0"
# description = "Add your description here"
# requires-python = ">=3.11"
# dependencies = [
#     "plotly>=6.1.2",
#     "scikit-learn>=1.7.0",
#     "scipy>=1.15.3",
#     "streamlit>=1.46.0",
#     "textblob>=0.19.0",
#     "trafilatura>=2.0.0",
#     "yfinance>=0.2.63",
# ]
